# llm-nonsense-commands-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: LLM_understanding_gibberish_adversarial_suffixes_interpretability_20260322_031540.jsonl  adversarial_nonsense_prompts_LLM_jailbreak_perplexity_20260322_031121.jsonl  perplexity_filtering_adversarial_attacks_language_models_safety_20260322_031853.jsonl
papers/: README.md
papers/pages/: detecting_perplexity_manifest.txt  (+3 more)
results/: analysis_results.json  analysis_summary.txt  config.json  directed_search_benign.csv  directed_search_jailbreak.csv  example_explanations.csv  experiment_config.json  experiment_results.csv  experiment_results.json  perplexity_measurements.csv  statistical_analysis.json  summary_table.csv
src/: analyze.py  analyze_results.py  experiment.py  llm_client.py  perplexity_calculator.py  prompt_generator.py  run_experiment.py
